# eneba-search

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f07b42ac655_02_remove_currency_model.py  83cd1bc5c8c1_01_initial_migration.py
app/: config.py
app/database/: __init__.py  connection.py  models.py  repository.py
app/routers/: __init__.py  games.py
app/schemas/: __init__.py  game.py
app/services/: __init__.py  game_service.py
app/templates/: list.html
scripts/: populate_db.py
static/css/: style.css
