[project]
name = "eneba-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
